welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: ')' expected but integer literal found.
	else if (is Weekend && cigars >=40 ) {return true }
                                        ^cigarParty:5: error: illegal start of simple expression
}
^