welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
	if (!isWeekend && cigars <= 60 && cigars >=40 ) {return true }
	else if (is Weekend && cigars >=40 ) {return true }
	else {return false  }
}
